--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,4 @@ Temporary Items
 /library/scss/OLD/
 /.archive/
 /JR_Shop/JR_Development_Variables.php
-/library/.sass-cache/
+/library/.sass-cache/*
