--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhc-theme",
-  "version": "1.2.0",
+  "version": "1.2.5",
   "description": "theme for Red Hot Chilli Northwest",
   "main": "gulpfile.js",
   "dependencies": {
@@ -9,7 +9,9 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-ruby-sass": "^1.4.0"
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^1.4.0",
+    "gulp-uglify": "^1.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
