--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^1.4.0",
-    "gulp-uglify": "^1.4.1"
+    "gulp-uglify": "^1.4.1",
+    "gulp-zip": "^3.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
