--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.9.0"
   },
   "devDependencies": {
+    "angular": "^1.4.8",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-rename": "^1.2.2",
