Revert "added critical css function"
This reverts commit 1aae87628370dbe3f7ef71af96d6c367f6c5cf7e.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,5 @@
   "bugs": {
     "url": "https://github.com/jon-r/Red-Hot-Chilli-Theme/issues"
   },
-  "homepage": "https://github.com/jon-r/Red-Hot-Chilli-Theme#readme",
-  "dependencies": {
-    "critical": "^0.7.0"
-  }
+  "homepage": "https://github.com/jon-r/Red-Hot-Chilli-Theme#readme"
 }
